# ros2_ws_demo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
image_processor/: package.xml  setup.py
image_processor/image_processor/subscriber/: subscriber_node.py
image_processor/launch/: start_all.launch.py
src/image_processor/: package.xml  setup.cfg  setup.py
src/image_processor/image_processor/publisher/: publisher_node.py
src/image_processor/image_processor/subscriber/: subscriber_node.py
src/image_processor/launch/: start_all.launch.py
